# pillar

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  build.sh  cleanup_run.bat  cleanup_run.sh  readme.md  toolchain-linux-clang.cmake  vcpkg.json  x64-linux-cpp23.cmake
.github/actions/vcpkg-setup/: action.yml
.github/workflows/: linux.yml  windows.yml
cmake/: Config.cmake.in  Doxyfile.in  cppcheck.cmake  setup_export_set_installation.cmake
dependencies/: CMakeLists.txt
dependencies/date/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
pillar_lib/: CMakeLists.txt
pillar_lib/include/pillar/: Assert.hpp  Date.hpp  Logger.hpp  Warnings.hpp  XDGBaseDirectories.hpp  assert.hpp  bytereader.hpp  compiler.hpp
pillar_lib/src/: Assert.cpp  Date.cpp  Logger.cpp  XDGBaseDirectories.cpp  assert.cpp  date.cpp  logger.cpp  xdgdirectories.cpp
test/: AssertTest.cpp  CMakeLists.txt  CurlTest.cpp  LoggerTest.cpp  PillarDateTest.cpp  XDGBaseDirectoriesTest.cpp  test_assert.cpp  test_bytereader.cpp  test_curl.cpp  test_logger.cpp  test_pillardate.cpp  test_xdgdirectories.cpp
